package ar.edu.utn.frba.dds.entities;

public class Hechos {
}
