package ar.edu.utn.frba.dds.domain.entities;

public class Coleccion {
}
