package ar.edu.utn.frba.dds.Hechos;

public class Categoria {
    private String nombre;
}
