package ar.edu.utn.frba.dds.Hechos;

import lombok.Getter;

import java.util.HashSet;

@Getter
public class Fuente {
    private HashSet<Hecho> hechos;
}
