package ar.edu.utn.frba.dds.Personas;

import ar.edu.utn.frba.dds.Hechos.Hecho;

public class Administrador {

    public void etiquetarHecho(Hecho hecho){}
    public void importarHechoCSV(String path){}
    public void aceptarSolicitudEliminacion(){}
    public void rechazarSolicitudEliminacion(){}

}
