package ar.edu.utn.frba.dds.Personas;

import ar.edu.utn.frba.dds.Hechos.Coleccion;

public class Visualizador {

    public void verHechosColeccion(Coleccion coleccion){}

    public void filtrarHechosColeccion(Coleccion coleccion){}

    public void subirHecho(){
        //Hecho hecho = new Hecho();
    }
}
